Correct display hamburger on mobile

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -53,6 +53,7 @@
 			  padding-left: 0;
 			  text-align: center;
 			  font-weight: lighter;
+			  margin-top: 0px;
 			}
 		}
 	}
