--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,4 +1,4 @@
-#form-contact {
+#contact {
   -webkit-box-shadow: 0px -10px 5px 0px rgba(224,215,224,1);
   -moz-box-shadow: 0px -10px 5px 0px rgba(224,215,224,1);
   box-shadow: 0px -3px 5px 0px rgb(115, 115, 115);
@@ -82,17 +82,20 @@ input, textarea {
   @include placeholder(#ffffff);
 }
 
+ 
+
 @media screen and (max-width: 768px) {
-	#form-contact {
+	#contact {
 		h1 {
 			font-size: 2.6em;
-			margin-left: 0;
+			margin-left: 0px;
+			margin-top: 0px;
 		}
 	}
 }
 
 @media screen and (max-width: 400px) {
-	#form-contact {
+	#contact {
 		.contact-icons {
 			li {
 				margin-right: 10px;
