--- a/src/app/initial-nav/initial-nav.component.scss
+++ b/src/app/initial-nav/initial-nav.component.scss
@@ -51,6 +51,7 @@
 			ul {
 				background-color: #ffffff;
 				margin-top: 0px;
+				padding: 15px 0;
 				li {
 					display: inline;
 					a {
