--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -148,6 +148,7 @@
 		padding-bottom: 80px;
 	}
 }
+
 @media screen and (max-width: 768px) {
 	#portfolio {
 		h1 {
@@ -155,6 +156,7 @@
 			padding-left: 0;
 			font-weight: lighter;
 			text-align: center;
+			margin-top: 0px;
 		}
 	}
 }
