--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -189,12 +189,14 @@ $background-skills-color: #8da5b1;
 	}
 }
 
+
 @media screen and (max-width: 768px) {
 	#skills {
 		h1 {
 			font-size: 2.6em;
 			padding-left: 0;
 			font-weight: lighter;
+			margin-top: 0px;
 		}
 	}
 }
@@ -207,6 +209,21 @@ $background-skills-color: #8da5b1;
 				.ch-item {
 					width: 250px;
 					height: 250px;
+				}
+		  }
+    }
+	}
+}
+@media screen and (max-width: 400px) {
+	#skills {
+		.item {
+		  .ch-grid {
+				.ch-item {
+					.ch-info {
+						h3 {
+							font-size: 0.99em;
+						}
+					}
 				}
 		  }
     }
